@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0104
+// generated by Fast Light User Interface Designer (fluid) version 1.0105
 
 #ifndef Fl_File_Chooser_H
 #define Fl_File_Chooser_H
@@ -230,6 +230,7 @@ public:
   static const char *filesystems_label;
   static const char *manage_favorites_label;
   static const char *new_directory_label;
+  static const char *new_directory_tooltip;
   static const char *preview_label;
   static const char *show_label;
   static Fl_File_Sort_F *sort;
