@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_File_Chooser2.cxx,v 1.1.2.24.2.7 2004/03/18 08:00:58 matthiaswm Exp $"
+// "$Id: Fl_File_Chooser2.cxx,v 1.1.2.24.2.8 2004/04/06 19:34:07 easysw Exp $"
 //
 // More Fl_File_Chooser routines.
 //
@@ -89,6 +89,7 @@ const char	*Fl_File_Chooser::filesystems_label = "File Systems";
 #endif // WIN32
 const char	*Fl_File_Chooser::manage_favorites_label = "Manage Favorites";
 const char	*Fl_File_Chooser::new_directory_label = "New Directory?";
+const char	*Fl_File_Chooser::new_directory_tooltip = "Create a new directory.";
 const char	*Fl_File_Chooser::preview_label = "Preview";
 const char	*Fl_File_Chooser::show_label = "Show:";
 Fl_File_Sort_F	*Fl_File_Chooser::sort = fl_numericsort;
@@ -1163,5 +1164,5 @@ unquote_pathname(char       *dst,	// O - Destination string
 
 
 //
-// End of "$Id: Fl_File_Chooser2.cxx,v 1.1.2.24.2.7 2004/03/18 08:00:58 matthiaswm Exp $".
+// End of "$Id: Fl_File_Chooser2.cxx,v 1.1.2.24.2.8 2004/04/06 19:34:07 easysw Exp $".
 //
